tests/ui/feature-gates/feature-gate-diagnostic-on-type-error.stderr
warning: unknown diagnostic attribute
  --> $DIR/feature-gate-diagnostic-on-type-error.rs:3:15
   |
LL | #[diagnostic::on_type_error(note = "expected {Expected}, found {Found}")]
   |               ^^^^^^^^^^^^^
   |
   = help: add `#![feature(diagnostic_on_type_error)]` to the crate attributes to enable
   = note: `#[warn(unknown_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

error[E0308]: mismatched types
  --> $DIR/feature-gate-diagnostic-on-type-error.rs:12:15
   |
LL |     takes_foo(foo);
   |     --------- ^^^ expected `Foo<i32>`, found `Foo<String>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Foo<i32>`
              found struct `Foo<String>`
note: function defined here
  --> $DIR/feature-gate-diagnostic-on-type-error.rs:8:4
   |
LL | fn takes_foo(_: Foo<i32>) {}
   |    ^^^^^^^^^ -----------

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
